# scan_tools

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE  README  README.md  rosdep.yaml  stack.xml
.github/workflows/: ci_focal.yml
canonical_scan_matcher/demo/: demo.launch
csm/: .gitignore  Makefile  csm-git-23703a998fff57250322.tar.gz.md5sum  manifest.xml  patch_b
laser_ortho_projector/: CHANGELOG.rst  CMakeLists.txt  manifest.xml  package.xml
laser_ortho_projector/include/laser_ortho_projector/: laser_ortho_projector.h
laser_ortho_projector/src/: laser_ortho_projector.cpp  laser_ortho_projector_nodelet.cpp
laser_scan_matcher/: CHANGELOG.rst  CMakeLists.txt  README.md  manifest.xml  package.xml
laser_scan_matcher/csm/: GetCSM.cmake
laser_scan_matcher/csm/patches/: patch_a  patch_c  patch_d
laser_scan_matcher/demo/: demo.bag  demo.launch  demo.vcg  demo_gmapping.launch  demo_gmapping.vcg  demo_vel.launch
laser_scan_matcher/include/laser_scan_matcher/: laser_scan_matcher.h  laser_scan_matcher_component.h  laser_scan_matcher_nodelet.h  param_handler.h
laser_scan_matcher/msg/: Pose2DStamped.msg
laser_scan_matcher/src/: laser_scan_matcher.cpp  laser_scan_matcher_component.cpp  laser_scan_matcher_node.cpp  laser_scan_matcher_nodelet.cpp  param_handler.cpp
laser_scan_sparsifier/: CHANGELOG.rst  CMakeLists.txt  LICENSE  manifest.xml  package.xml
laser_scan_sparsifier/include/laser_scan_sparsifier/: laser_scan_sparsifier.h
laser_scan_sparsifier/src/: laser_scan_sparsifier.cpp  laser_scan_sparsifier_nodelet.cpp
laser_scan_splitter/: CHANGELOG.rst  CMakeLists.txt  manifest.xml  package.xml
laser_scan_splitter/cfg/: splitter.cfgc
laser_scan_splitter/cfg/cpp/laser_scan_splitter/: SplitterConfig.h
laser_scan_splitter/src/: laser_scan_splitter_nodelet.cpp
ncd_parser/: CHANGELOG.rst  CMakeLists.txt  LICENSE  README  manifest.xml  package.xml
polar_scan_matcher/: CHANGELOG.rst  CMakeLists.txt  README  manifest.xml  package.xml
polar_scan_matcher/demo/: demo.launch  demo.vcg
polar_scan_matcher/include/polar_scan_matcher/: psm_node.h
polar_scan_matcher/src/: psm_node.cpp
scan_to_cloud_converter/: CHANGELOG.rst  CMakeLists.txt  LICENSE  mainpage.dox  manifest.xml  package.xml
scan_to_cloud_converter/include/scan_to_cloud_converter/: scan_to_cloud_converter.h
scan_to_cloud_converter/src/: scan_to_cloud_converter.cpp
scan_tools/: CHANGELOG.rst  CMakeLists.txt  package.xml
