<package>
  <name>laser_ortho_projector</name>
  <version>0.1.2</version>
  <description>
    The laser_ortho_projector package calculates orthogonal projections of LaserScan messages.
  </description>
  <maintainer email="ccnyroboticslab@gmail.com">Ivan Dryanovski</maintainer>

  <url>http://wiki.ros.org/laser_scan_matcher</url>
  <author>Ivan Dryanovski</author>
  <author>William Morris</author>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>nodelet</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>pcl</build_depend>
  <build_depend>pcl_ros</build_depend>
  <build_depend>pcl_conversions</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>message_filters</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>nodelet</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>pcl</run_depend>
  <run_depend>pcl_ros</run_depend>
  <run_depend>pcl_conversions</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>message_filters</run_depend>

  <export>
    <nodelet plugin="${prefix}/laser_ortho_projector_nodelet.xml" />
  </export>

</package>
