<package>
  <name>laser_scan_matcher</name>
  <version>0.1.2</version>
  <description>
    <p>
     An incremental laser scan matcher, using Andrea Censi's Canonical Scan Matcher implementation. Package downloads and installs Canonical Scan Matcher locally.  Patches are applied to accept scans in cartesian (x,y) coordinates. More about <a href="http://www.cds.caltech.edu/~andrea/research/sw/csm.html">CSM</a>. NOTE the Canonical Scan Matcher library is licensed under the GNU Lesser General Public License v3, whereas the rest of the code is released under the BSD license.
    </p>
  </description>
  <maintainer email="ccnyroboticslab@gmail.com">Ivan Dryanovski</maintainer>

  <url>http://wiki.ros.org/laser_scan_matcher</url>
  <author>Ivan Dryanovski</author>
  <author>William Morris</author>
  <author>Andrea Censi</author>

  <license>BSD</license>
  <license>LGPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>git</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>nodelet</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>pcl</build_depend>
  <build_depend>pcl_ros</build_depend>
  <build_depend>pcl_conversions</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>libgsl</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>nodelet</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>pcl</run_depend>
  <run_depend>pcl_ros</run_depend>
  <run_depend>pcl_conversions</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>libgsl</run_depend>

  <export>
    <nodelet plugin="${prefix}/laser_scan_matcher_nodelet.xml" />
  </export>

</package>
