<package>
  <name>scan_to_cloud_converter</name>
  <version>0.1.2</version>
  <description>
    Converts LaserScan to PointCloud messages.
  </description>
  <maintainer email="ccnyroboticslab@gmail.com">Ivan Dryanovski</maintainer>

  <url>http://wiki.ros.org/laser_scan_matcher</url>
  <author>Ivan Dryanovski</author>
  <author>William Morris</author>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>pcl</build_depend>
  <build_depend>pcl_ros</build_depend>
  <build_depend>pcl_conversions</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>pcl</run_depend>
  <run_depend>pcl_ros</run_depend>
  <run_depend>pcl_conversions</run_depend>

</package>
