<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>scan_tools</name>
  <version>0.3.3</version>

  <description>
    Laser scan processing tools.
  </description>

  <author email="ccnyroboticslab@gmail.com">Ivan Dryanovski</author>
  <maintainer email="cjaramillo@gc.cuny.edu">Carlos</maintainer>
  <maintainer email="130s@2000.jukuin.keio.ac.jp">Isaac I.Y. Saito</maintainer>

  <license>BSD</license>
  <license>LGPLv3</license>

  <url>http://ros.org/wiki/scan_tools</url>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>laser_scan_matcher</exec_depend>
  <exec_depend>scan_to_cloud_converter</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
